# jetbrains-llm-eval

./: .env.example  .gitignore  README.md  evaluator.py  langgraph_adapter.py  pyproject.toml  requirements.txt  results.jsonl  run.py
agent/: agent.py  tools.py
dataset/: bogus.jsonl  bogus.parquet  convert_bogus_to_parquet.py  humaneval_py.parquet
results/: bogus.jsonl  bogus_results.jsonl  humanevalfix_qwen25_0.5b.jsonl  humanevalfix_qwen25_0.5b_10.jsonl  humanevalfix_qwen25_0.5b_100.jsonl  humanevalfix_qwen25_0.5b_full.jsonl  results.jsonl  tmp_results.jsonl
src/: __init__.py  visualize_results.py
src/agent/: __init__.py  llm.py  react_agent.py  sandbox.py
src/eval/: humaneval_eval.py
