[project]
name = "jetbrains-llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "langgraph>=0.2.28",
    "langchain-core>=0.3.6",
    "python-dotenv>=1.0.1",
    # Local inference
    "transformers>=4.57.1",
    "torch>=2.3.0",
    "accelerate>=0.33.0",
    "safetensors>=0.4.2",
]
