[project]
name = "jetbrains-llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "langchain-core>=1.0.2",
    "langgraph>=1.0.2",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
