[project]
name = "jetbrains-llm-eval"
version = "1.0.0"
description = "ReAct-style LangGraph agent for HumanEvalFix bug-fixing pass@1 benchmarking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "langchain-core>=1.0.2",
    "langgraph>=1.0.2",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[project.urls]
homepage = "https://github.com/Wayrion/jetbrains-llm-eval"
repository = "https://github.com/Wayrion/jetbrains-llm-eval"
